<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/medium_margin">

    <!-- A CardView that contains a TextView -->
    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvItemDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        card_view:cardCornerRadius="@dimen/small_radius">

        <RelativeLayout
            android:id="@+id/rlAddItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_margin">

            <Spinner
                android:id="@+id/spinnerSortOrder"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/small_margin"
                android:entries="@array/sort_orders" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPiece"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_below="@+id/spinnerSortOrder"
                android:hint="@string/enter_piece_limit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPiece"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilPiece"
                android:hint="@string/enter_weight_limit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilWeight"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnShowConstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvResult"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/save_constraints"
                android:theme="@style/AppTheme.DarkButton" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/pgBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>